# server/controllers/GroupController.js
@@ -92,17 +92,60 @@ export const updateGroupDetails = async (req, res, next) => {
   const { name, description } = req.body;
 
   try {
+    const group = await GroupModel.getGroupDetails(groupId);
+    if (!group) {
+      return next(new ApiError("Group not found", 404));
+    }
     const result = await GroupModel.updateGroupDetails(
       groupId,
       name,
       description
     );
-    if (!result) {
-      return next(new ApiError("Group not found", 404));
-    }
     return res.status(200).json({ message: "Group details updated", result });
   } catch (error) {
     return next(new ApiError("Server error while updateGroupDetails", 500));
+  }
+};
+
+export const sendJoinRequest = async (req, res, next) => {
+  const { groupId } = req.params;
+  const { id } = req.user;
+  try {
+    const group = await GroupModel.getGroupDetails(groupId);
+    if (!group) {
+      return next(new ApiError("Group not found", 404));
+    }
+
+    const request = await JoinRequestModel.createJoinRequest(groupId, id);
+    return res
+      .status(201)
+      .json({ message: "Join request sent successfully", request });
+  } catch (error) {
+    return next(new ApiError("Server error while sendJoinRequest", 500));
+  }
+};
+
+export const cancelJoinRequest = async (req, res, next) => {
+  const { groupId } = req.params;
+  const { id } = req.user;
+
+  try {
+    const group = await GroupModel.getGroupDetails(groupId);
+    if (!group) {
+      return next(new ApiError("Group not found", 404));
+    }
+
+    const result = await JoinRequestModel.cancelRequest(groupId, id);
+    if (result.rowCount === 0) {
+      return res.status(404).json({ message: "Request not found" });
+    }
+
+    const request = result.rows[0];
+    return res
+      .status(200)
+      .json({ message: "Join request cancel successfully", request });
+  } catch (error) {
+    return next(new ApiError("Server error while cancelJoinRequest", 500));
   }
 };
 
@@ -110,10 +153,32 @@ export const getGroupMembers = async (req, res, next) => {
   const { groupId } = req.params;
 
   try {
+    const group = await GroupModel.getGroupDetails(groupId);
+    if (!group) {
+      return next(new ApiError("Group not found", 404));
+    }
     const members = await GroupModel.getGroupMembers(groupId);
-    return res.status(200).json(members.rows || []);
+    return res.status(200).json(members || []);
   } catch (error) {
     return next(new ApiError("Server error while getGroupMembers", 500));
+  }
+};
+
+// Controller for user to leave the group
+export const leaveGroup = async (req, res, next) => {
+  const { groupId } = req.params;
+  const { id } = req.user;
+
+  try {
+    const result = await GroupModel.leaveGroup(groupId, id);
+
+    if (result.rowCount === 0) {
+      return next(new ApiError("You are not a member of this group", 404));
+    }
+
+    return res.status(200).json({ message: "You have left the group" });
+  } catch (error) {
+    return next(new ApiError("Server error while leaveGroup", 500));
   }
 };
 
@@ -128,40 +193,6 @@ export const deleteGroupByGroupId = async (req, res, next) => {
     return res.status(200).json(response);
   } catch (error) {
     return next(new ApiError("Server error while deleteGroupByGroupId", 500));
-  }
-};
-
-export const sendJoinRequest = async (req, res) => {
-  const { groupId } = req.params;
-  const { id } = req.user;
-
-  try {
-    const request = await JoinRequestModel.createJoinRequest(groupId, id);
-    return res
-      .status(201)
-      .json({ message: "Join request sent successfully", request });
-  } catch (error) {
-    return next(new ApiError("Server error while sendJoinRequest", 500));
-  }
-};
-
-export const cancelJoinRequest = async (req, res) => {
-  const { groupId } = req.params;
-  const { id } = req.user;
-
-  try {
-    const result = await JoinRequestModel.cancelRequest(groupId, id);
-
-    if (result.rowCount === 0) {
-      return res.status(404).json({ message: "Request not found" });
-    }
-
-    const request = result.rows[0];
-    return res
-      .status(200)
-      .json({ message: "Join request cancel successfully", request });
-  } catch (error) {
-    return next(new ApiError("Server error while cancelJoinRequest", 500));
   }
 };
 
@@ -239,26 +270,6 @@ export const removeMember = async (req, res, next) => {
     return res.status(200).json({ message: "Member removed from the group" });
   } catch (error) {
     return next(new ApiError("Server error while removeMember", 500));
-  }
-};
-
-// Controller for user to leave the group
-export const leaveGroup = async (req, res, next) => {
-  const { groupId } = req.params;
-  const { id } = req.user; // the logged-in user
-
-  try {
-    const result = await GroupModel.leaveGroup(groupId, id);
-
-    if (result.rowCount === 0) {
-      return res
-        .status(404)
-        .json({ message: "You are not a member of this group" });
-    }
-
-    return res.status(200).json({ message: "You have left the group" });
-  } catch (error) {
-    return next(new ApiError("Server error while leaveGroup", 500));
   }
 };
 
